Changelog
=========

1.0b1 ~ unreleased
------------------

- update flexpaper to 1.4.0
  [vangheem]
  
- auto select page turner view for pdf files now and make configurable
  via portal_properties -> site_properties
  [vangheem]

0.6
---

- Fix for storing blobs.
  [davisagli]

- Don't swallow exceptions while converting; log them.
  [davisagli]

- Use the subprocess module instead of popen2 to communicate with pdf2swf.
  [davisagli]

- Protect the page turner settings page with the "Modify view template"
  permission.
  [davisagli]

- Avoid purging existing view methods for the File type on installation.
  [davisagli]

0.5 ~ 2010-05-21
----------------

- Initial release